2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* tests/*: Make tests work 

2008-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols: Add g_memory_output_stream_get_data_size.

2008-05-25  Ross Burton  <ross@burtonini.com>

	* glocalfile.c:
	Fix typo in error message (#534764).

2008-05-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	Fix circular dependency loop for gioenumtypes.h (#534759).

2008-05-19  Hans Breuer  <hans@breuer.org>

	* Makefile.am : EXTRA_DIST += makefile.msc

2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 532965 – Should not return filesystem::free for certain file systems

	* glocalfile.c (g_local_file_query_filesystem_info) Don't return
	free space for ncpfs.

2008-05-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 530196 – _g_local_file_has_trash_dir() doesn't handle st_dev == 0

	* glocalfile.c (_g_local_file_has_trash_dir): Handle the case that
	st_dev might be zero.

2008-05-16  Tor Lillqvist  <tml@novell.com>

	* win32/gwin32directorymonitor.c: #define _WIN32_WINNT 0x0400 to
	get declaration of ReadDirectoryChangesW() from Platform SDK headers.

2008-05-13  Bastien Nocera  <hadess@hadess.net>

	* gfile.c (has_valid_scheme): A URI scheme must start with a
	letter, even if later more characters are allowed (#532852)

2008-05-05  Michael Natterer  <mitch@imendio.com>

	* Makefile.am. build with G_DISABLE_SINGLE_INCLUDES to prevent
	code from being checked in that breaks the build of applications
	which use G_DISABLE_SINGLE_INCLUDES.

	* makegioalias.pl: make the alias file include "glib.h" instead of
	"glibconfig.h".

	* gio.symbols: whitespace change to force regeneration of the
	alias file after above script change.

	* gfileinfo.h: remove inlcusion of <glib/gfileutils.h>.

	* gfilenamecompleter.c: remove inclusion of "gurifuncs.h".

	* gioerror.h: #include <glib.h> instead of <glib/gerror.h>.

	* glocalfileinfo.c: remove inclusion of <glib/gchecksum>.

2008-04-28  David Zeuthen  <davidz@redhat.com>
